added facebook auth
