# api/auth/authentication/authentication.openapi.yml
@@ -1,5 +1,5 @@
 paths:
-  '/auth/login':
+  "/auth/login":
     post:
       tags:
         - auth
@@ -25,7 +25,7 @@ paths:
                   properties:
                     idDocumentType:
                       type: string
-                      enum: ['DNI', 'CE', 'PASSPORT']
+                      enum: ["DNI", "CE", "PASSPORT"]
                     idDocumentNumber:
                       type: string
                     password:
@@ -38,28 +38,28 @@ paths:
               email:
                 value:
                   email: correo@gmail.com
-                  password: '1234567890'
+                  password: "1234567890"
               DNI:
                 value:
                   idDocumentType: DNI
-                  idDocumentNumber: '12345678'
-                  password: '1234567890'
+                  idDocumentNumber: "12345678"
+                  password: "1234567890"
               CE:
                 value:
                   idDocumentType: CE
-                  idDocumentNumber: '12345678'
-                  password: '1234567890'
+                  idDocumentNumber: "12345678"
+                  password: "1234567890"
               PASSPORT:
                 value:
                   idDocumentType: PASSPORT
-                  idDocumentNumber: '12345678'
-                  password: '1234567890'
+                  idDocumentNumber: "12345678"
+                  password: "1234567890"
       responses:
         200:
           description: Successful Login
         400:
           description: Authentication failed
-  '/auth/signup':
+  "/auth/signup":
     post:
       tags:
         - auth
@@ -71,45 +71,46 @@ paths:
           application/json:
             schema:
               allOf:
-                - $ref: '#/components/schemas/registerPayload'
+                - $ref: "#/components/schemas/registerPayload"
                 - type: object
                   properties:
                     password:
                       type: string
               required:
                 - password
+                -
             examples:
               Completo:
                 value:
-                  idDocumentType: 'CE'
-                  idDocumentNumber: '65487312'
-                  email: 'hola@correo.com'
-                  password: 'password'
-                  name: 'hola'
-                  lastName: 'test'
-                  phonePrefix: '+51'
-                  phoneNumber: '987654321'
-                  companyName: 'Empresa Prueba'
+                  idDocumentType: "CE"
+                  idDocumentNumber: "65487312"
+                  email: "hola@correo.com"
+                  password: "password"
+                  name: "hola"
+                  lastName: "test"
+                  phonePrefix: "+51"
+                  phoneNumber: "987654321"
+                  companyName: "Empresa Prueba"
               Minimo:
                 value:
-                  idDocumentType: 'DNI'
-                  idDocumentNumber: '65487312'
-                  email: 'hola2@correo.com'
-                  password: 'password'
-                  name: 'hola'
-                  lastName: 'test'
+                  idDocumentType: "DNI"
+                  idDocumentNumber: "65487312"
+                  email: "hola2@correo.com"
+                  password: "password"
+                  name: "hola"
+                  lastName: "test"
       responses:
         200:
           description: Successful Signup
         400:
           description: Register failed
-  '/auth/google/signup':
+  "/auth/google/signup":
     post:
       tags:
         - auth
-      summary: Signup by google auth
+      summary: Signup by Google auth
       description: |
-        Signup service to register by google auth
+        Signup service to register by Google auth
 
         [Tutorial](https://www.youtube.com/watch?v=j_31hJtWjlw)
 
@@ -119,42 +120,42 @@ paths:
           application/json:
             schema:
               allOf:
-                - $ref: '#/components/schemas/registerPayload'
+                - $ref: "#/components/schemas/registerPayload"
                 - type: object
                   properties:
-                    idToken:
+                    access_token:
                       type: string
                       description: |
                         Id token provisto por servicio de Google
                         Para mayor informacion https://www.youtube.com/watch?v=j_31hJtWjlw
               required:
-                - password
+                - access_token
             examples:
               Completo:
                 value:
-                  idDocumentType: 'CE'
-                  idDocumentNumber: '65487312'
-                  email: 'hola@correo.com'
-                  name: 'hola'
-                  lastName: 'test'
-                  phonePrefix: '+51'
-                  phoneNumber: '987654321'
-                  companyName: 'Empresa Prueba'
-                  idToken: 'eyJhbGciOiJSUzI1NiIsImtpZCI6IjUzYzY2YWFiNTBjZmRkOTFhMTQzNTBhNjY0ODJkYjM4MDBjODNjNjMiLCJ0eXAiOiJKV1QifQ.eyJpc3MiOiJodHRwczovL2FjY291bnRzLmdvb2dsZS5jb20iLCJhenAiOiI0ODI2MDEwMjQzNzctZHZzajIzYThkazY3b2dyN3Y2ZTA4ZTkxZ3JpYmk1aGEuYXBwcy5nb29nbGV1c2VyY29udGVudC5jb20iLCJhdWQiOiI0ODI2MDEwMjQzNzctZHZzajIzYThkazY3b2dyN3Y2ZTA4ZTkxZ3JpYmk1aGEuYXBwcy5nb29nbGV1c2VyY29udGVudC5jb20iLCJzdWIiOiIxMDMwNjM4MjA1NDMzMzEzODc0NjIiLCJoZCI6InBhcGVyY3ViZS5wZSIsImVtYWlsIjoiam9zZS5tYWxsbWFAcGFwZXJjdWJlLnBlIiwiZW1haWxfdmVyaWZpZWQiOnRydWUsImF0X2hhc2giOiJJQkFpTGV0UHlVZ3VlTnhPTnJXd2Z3IiwibmFtZSI6Ikpvc2UgQW50b25pbyBNYWxsbWEgTGXDs24iLCJwaWN0dXJlIjoiaHR0cHM6Ly9saDUuZ29vZ2xldXNlcmNvbnRlbnQuY29tLy1vckZxaDF5YzBtYy9BQUFBQUFBQUFBSS9BQUFBQUFBQUFBQS9BS0YwNW5BQ1d6Si1ad0FPcjBEVVpvakp0eHpwN0NSUGhRL3M5Ni1jL3Bob3RvLmpwZyIsImdpdmVuX25hbWUiOiJKb3NlIEFudG9uaW8iLCJmYW1pbHlfbmFtZSI6Ik1hbGxtYSBMZcOzbiIsImxvY2FsZSI6ImVzIiwiaWF0IjoxNTg1NTM0NjM3LCJleHAiOjE1ODU1MzgyMzd9.QAZl2dH79fDNK8dbn7Z2rqup2jElFhMaAT53Hwg_NfVqDWvJ2zKUOBtJdp6ktsYVVClDzK-N-MMxOorss02XfjgzkP7RbDuozRdvDEP8ivCvKOPICnMQ4Cr-mucMbF0HjNMbG_1fgKXduJVUZtrwwRyM2aJl9vfIZk5mpDjOHEjoamuS2R9P2k37Yvyh9htfCih1C07uK_0ysOnHNp5Dc_VPF3zFI9R-cRI_7UNys4XtZaMSbV5xdmrJv_HoWtTdKn9f8CyAFaqL1nxnB8S0xQ5wEZRZCV0Ee6k28GSSTdIcqc3xShsrzdl00rl1Q0oE7uynyFqgdJ0ze5Nh3zp8eQ'
+                  idDocumentType: "CE"
+                  idDocumentNumber: "65487312"
+                  email: "hola@correo.com"
+                  name: "hola"
+                  lastName: "test"
+                  phonePrefix: "+51"
+                  phoneNumber: "987654321"
+                  companyName: "Empresa Prueba"
+                  access_token: "eyJhbGciOiJSUzI1NiIsImtpZCI6IjUzYzY2YWFiNTBjZmRkOTFhMTQzNTBhNjY0ODJkYjM4MDBjODNjNjMiLCJ0eXAiOiJKV1QifQ.eyJpc3MiOiJodHRwczovL2FjY291bnRzLmdvb2dsZS5jb20iLCJhenAiOiI0ODI2MDEwMjQzNzctZHZzajIzYThkazY3b2dyN3Y2ZTA4ZTkxZ3JpYmk1aGEuYXBwcy5nb29nbGV1c2VyY29udGVudC5jb20iLCJhdWQiOiI0ODI2MDEwMjQzNzctZHZzajIzYThkazY3b2dyN3Y2ZTA4ZTkxZ3JpYmk1aGEuYXBwcy5nb29nbGV1c2VyY29udGVudC5jb20iLCJzdWIiOiIxMDMwNjM4MjA1NDMzMzEzODc0NjIiLCJoZCI6InBhcGVyY3ViZS5wZSIsImVtYWlsIjoiam9zZS5tYWxsbWFAcGFwZXJjdWJlLnBlIiwiZW1haWxfdmVyaWZpZWQiOnRydWUsImF0X2hhc2giOiJJQkFpTGV0UHlVZ3VlTnhPTnJXd2Z3IiwibmFtZSI6Ikpvc2UgQW50b25pbyBNYWxsbWEgTGXDs24iLCJwaWN0dXJlIjoiaHR0cHM6Ly9saDUuZ29vZ2xldXNlcmNvbnRlbnQuY29tLy1vckZxaDF5YzBtYy9BQUFBQUFBQUFBSS9BQUFBQUFBQUFBQS9BS0YwNW5BQ1d6Si1ad0FPcjBEVVpvakp0eHpwN0NSUGhRL3M5Ni1jL3Bob3RvLmpwZyIsImdpdmVuX25hbWUiOiJKb3NlIEFudG9uaW8iLCJmYW1pbHlfbmFtZSI6Ik1hbGxtYSBMZcOzbiIsImxvY2FsZSI6ImVzIiwiaWF0IjoxNTg1NTM0NjM3LCJleHAiOjE1ODU1MzgyMzd9.QAZl2dH79fDNK8dbn7Z2rqup2jElFhMaAT53Hwg_NfVqDWvJ2zKUOBtJdp6ktsYVVClDzK-N-MMxOorss02XfjgzkP7RbDuozRdvDEP8ivCvKOPICnMQ4Cr-mucMbF0HjNMbG_1fgKXduJVUZtrwwRyM2aJl9vfIZk5mpDjOHEjoamuS2R9P2k37Yvyh9htfCih1C07uK_0ysOnHNp5Dc_VPF3zFI9R-cRI_7UNys4XtZaMSbV5xdmrJv_HoWtTdKn9f8CyAFaqL1nxnB8S0xQ5wEZRZCV0Ee6k28GSSTdIcqc3xShsrzdl00rl1Q0oE7uynyFqgdJ0ze5Nh3zp8eQ"
               Minimo:
                 value:
-                  idDocumentType: 'DNI'
-                  idDocumentNumber: '65487312'
-                  email: 'hola2@correo.com'
-                  name: 'hola'
-                  lastName: 'test'
-                  idToken: 'eyJhbGciOiJSUzI1NiIsImtpZCI6IjUzYzY2YWFiNTBjZmRkOTFhMTQzNTBhNjY0ODJkYjM4MDBjODNjNjMiLCJ0eXAiOiJKV1QifQ.eyJpc3MiOiJodHRwczovL2FjY291bnRzLmdvb2dsZS5jb20iLCJhenAiOiI0ODI2MDEwMjQzNzctZHZzajIzYThkazY3b2dyN3Y2ZTA4ZTkxZ3JpYmk1aGEuYXBwcy5nb29nbGV1c2VyY29udGVudC5jb20iLCJhdWQiOiI0ODI2MDEwMjQzNzctZHZzajIzYThkazY3b2dyN3Y2ZTA4ZTkxZ3JpYmk1aGEuYXBwcy5nb29nbGV1c2VyY29udGVudC5jb20iLCJzdWIiOiIxMDMwNjM4MjA1NDMzMzEzODc0NjIiLCJoZCI6InBhcGVyY3ViZS5wZSIsImVtYWlsIjoiam9zZS5tYWxsbWFAcGFwZXJjdWJlLnBlIiwiZW1haWxfdmVyaWZpZWQiOnRydWUsImF0X2hhc2giOiJJQkFpTGV0UHlVZ3VlTnhPTnJXd2Z3IiwibmFtZSI6Ikpvc2UgQW50b25pbyBNYWxsbWEgTGXDs24iLCJwaWN0dXJlIjoiaHR0cHM6Ly9saDUuZ29vZ2xldXNlcmNvbnRlbnQuY29tLy1vckZxaDF5YzBtYy9BQUFBQUFBQUFBSS9BQUFBQUFBQUFBQS9BS0YwNW5BQ1d6Si1ad0FPcjBEVVpvakp0eHpwN0NSUGhRL3M5Ni1jL3Bob3RvLmpwZyIsImdpdmVuX25hbWUiOiJKb3NlIEFudG9uaW8iLCJmYW1pbHlfbmFtZSI6Ik1hbGxtYSBMZcOzbiIsImxvY2FsZSI6ImVzIiwiaWF0IjoxNTg1NTM0NjM3LCJleHAiOjE1ODU1MzgyMzd9.QAZl2dH79fDNK8dbn7Z2rqup2jElFhMaAT53Hwg_NfVqDWvJ2zKUOBtJdp6ktsYVVClDzK-N-MMxOorss02XfjgzkP7RbDuozRdvDEP8ivCvKOPICnMQ4Cr-mucMbF0HjNMbG_1fgKXduJVUZtrwwRyM2aJl9vfIZk5mpDjOHEjoamuS2R9P2k37Yvyh9htfCih1C07uK_0ysOnHNp5Dc_VPF3zFI9R-cRI_7UNys4XtZaMSbV5xdmrJv_HoWtTdKn9f8CyAFaqL1nxnB8S0xQ5wEZRZCV0Ee6k28GSSTdIcqc3xShsrzdl00rl1Q0oE7uynyFqgdJ0ze5Nh3zp8eQ'
+                  idDocumentType: "DNI"
+                  idDocumentNumber: "65487312"
+                  email: "hola2@correo.com"
+                  name: "hola"
+                  lastName: "test"
+                  access_token: "eyJhbGciOiJSUzI1NiIsImtpZCI6IjUzYzY2YWFiNTBjZmRkOTFhMTQzNTBhNjY0ODJkYjM4MDBjODNjNjMiLCJ0eXAiOiJKV1QifQ.eyJpc3MiOiJodHRwczovL2FjY291bnRzLmdvb2dsZS5jb20iLCJhenAiOiI0ODI2MDEwMjQzNzctZHZzajIzYThkazY3b2dyN3Y2ZTA4ZTkxZ3JpYmk1aGEuYXBwcy5nb29nbGV1c2VyY29udGVudC5jb20iLCJhdWQiOiI0ODI2MDEwMjQzNzctZHZzajIzYThkazY3b2dyN3Y2ZTA4ZTkxZ3JpYmk1aGEuYXBwcy5nb29nbGV1c2VyY29udGVudC5jb20iLCJzdWIiOiIxMDMwNjM4MjA1NDMzMzEzODc0NjIiLCJoZCI6InBhcGVyY3ViZS5wZSIsImVtYWlsIjoiam9zZS5tYWxsbWFAcGFwZXJjdWJlLnBlIiwiZW1haWxfdmVyaWZpZWQiOnRydWUsImF0X2hhc2giOiJJQkFpTGV0UHlVZ3VlTnhPTnJXd2Z3IiwibmFtZSI6Ikpvc2UgQW50b25pbyBNYWxsbWEgTGXDs24iLCJwaWN0dXJlIjoiaHR0cHM6Ly9saDUuZ29vZ2xldXNlcmNvbnRlbnQuY29tLy1vckZxaDF5YzBtYy9BQUFBQUFBQUFBSS9BQUFBQUFBQUFBQS9BS0YwNW5BQ1d6Si1ad0FPcjBEVVpvakp0eHpwN0NSUGhRL3M5Ni1jL3Bob3RvLmpwZyIsImdpdmVuX25hbWUiOiJKb3NlIEFudG9uaW8iLCJmYW1pbHlfbmFtZSI6Ik1hbGxtYSBMZcOzbiIsImxvY2FsZSI6ImVzIiwiaWF0IjoxNTg1NTM0NjM3LCJleHAiOjE1ODU1MzgyMzd9.QAZl2dH79fDNK8dbn7Z2rqup2jElFhMaAT53Hwg_NfVqDWvJ2zKUOBtJdp6ktsYVVClDzK-N-MMxOorss02XfjgzkP7RbDuozRdvDEP8ivCvKOPICnMQ4Cr-mucMbF0HjNMbG_1fgKXduJVUZtrwwRyM2aJl9vfIZk5mpDjOHEjoamuS2R9P2k37Yvyh9htfCih1C07uK_0ysOnHNp5Dc_VPF3zFI9R-cRI_7UNys4XtZaMSbV5xdmrJv_HoWtTdKn9f8CyAFaqL1nxnB8S0xQ5wEZRZCV0Ee6k28GSSTdIcqc3xShsrzdl00rl1Q0oE7uynyFqgdJ0ze5Nh3zp8eQ"
       responses:
         200:
           description: Successful Signup
         400:
           description: Register failed
-  '/auth/google/login':
+  "/auth/google/login":
     post:
       tags:
         - auth
@@ -172,14 +173,96 @@ paths:
             schema:
               type: object
               properties:
-                idToken:
+                access_token:
                   type: string
               required:
-                - idToken
+                - access_token
             examples:
-              idToken:
+              access_token:
                 value:
-                  idToken: eyJhbGciOiJSUzI1NiIsImtpZCI6IjUzYzY2YWFiNTBjZmRkOTFhMTQzNTBhNjY0ODJkYjM4MDBjODNjNjMiLCJ0eXAiOiJKV1QifQ.eyJpc3MiOiJodHRwczovL2FjY291bnRzLmdvb2dsZS5jb20iLCJhenAiOiI0ODI2MDEwMjQzNzctZHZzajIzYThkazY3b2dyN3Y2ZTA4ZTkxZ3JpYmk1aGEuYXBwcy5nb29nbGV1c2VyY29udGVudC5jb20iLCJhdWQiOiI0ODI2MDEwMjQzNzctZHZzajIzYThkazY3b2dyN3Y2ZTA4ZTkxZ3JpYmk1aGEuYXBwcy5nb29nbGV1c2VyY29udGVudC5jb20iLCJzdWIiOiIxMDMwNjM4MjA1NDMzMzEzODc0NjIiLCJoZCI6InBhcGVyY3ViZS5wZSIsImVtYWlsIjoiam9zZS5tYWxsbWFAcGFwZXJjdWJlLnBlIiwiZW1haWxfdmVyaWZpZWQiOnRydWUsImF0X2hhc2giOiJJQkFpTGV0UHlVZ3VlTnhPTnJXd2Z3IiwibmFtZSI6Ikpvc2UgQW50b25pbyBNYWxsbWEgTGXDs24iLCJwaWN0dXJlIjoiaHR0cHM6Ly9saDUuZ29vZ2xldXNlcmNvbnRlbnQuY29tLy1vckZxaDF5YzBtYy9BQUFBQUFBQUFBSS9BQUFBQUFBQUFBQS9BS0YwNW5BQ1d6Si1ad0FPcjBEVVpvakp0eHpwN0NSUGhRL3M5Ni1jL3Bob3RvLmpwZyIsImdpdmVuX25hbWUiOiJKb3NlIEFudG9uaW8iLCJmYW1pbHlfbmFtZSI6Ik1hbGxtYSBMZcOzbiIsImxvY2FsZSI6ImVzIiwiaWF0IjoxNTg1NTM0NjM3LCJleHAiOjE1ODU1MzgyMzd9.QAZl2dH79fDNK8dbn7Z2rqup2jElFhMaAT53Hwg_NfVqDWvJ2zKUOBtJdp6ktsYVVClDzK-N-MMxOorss02XfjgzkP7RbDuozRdvDEP8ivCvKOPICnMQ4Cr-mucMbF0HjNMbG_1fgKXduJVUZtrwwRyM2aJl9vfIZk5mpDjOHEjoamuS2R9P2k37Yvyh9htfCih1C07uK_0ysOnHNp5Dc_VPF3zFI9R-cRI_7UNys4XtZaMSbV5xdmrJv_HoWtTdKn9f8CyAFaqL1nxnB8S0xQ5wEZRZCV0Ee6k28GSSTdIcqc3xShsrzdl00rl1Q0oE7uynyFqgdJ0ze5Nh3zp8eQ
+                  access_token: eyJhbGciOiJSUzI1NiIsImtpZCI6IjUzYzY2YWFiNTBjZmRkOTFhMTQzNTBhNjY0ODJkYjM4MDBjODNjNjMiLCJ0eXAiOiJKV1QifQ.eyJpc3MiOiJodHRwczovL2FjY291bnRzLmdvb2dsZS5jb20iLCJhenAiOiI0ODI2MDEwMjQzNzctZHZzajIzYThkazY3b2dyN3Y2ZTA4ZTkxZ3JpYmk1aGEuYXBwcy5nb29nbGV1c2VyY29udGVudC5jb20iLCJhdWQiOiI0ODI2MDEwMjQzNzctZHZzajIzYThkazY3b2dyN3Y2ZTA4ZTkxZ3JpYmk1aGEuYXBwcy5nb29nbGV1c2VyY29udGVudC5jb20iLCJzdWIiOiIxMDMwNjM4MjA1NDMzMzEzODc0NjIiLCJoZCI6InBhcGVyY3ViZS5wZSIsImVtYWlsIjoiam9zZS5tYWxsbWFAcGFwZXJjdWJlLnBlIiwiZW1haWxfdmVyaWZpZWQiOnRydWUsImF0X2hhc2giOiJJQkFpTGV0UHlVZ3VlTnhPTnJXd2Z3IiwibmFtZSI6Ikpvc2UgQW50b25pbyBNYWxsbWEgTGXDs24iLCJwaWN0dXJlIjoiaHR0cHM6Ly9saDUuZ29vZ2xldXNlcmNvbnRlbnQuY29tLy1vckZxaDF5YzBtYy9BQUFBQUFBQUFBSS9BQUFBQUFBQUFBQS9BS0YwNW5BQ1d6Si1ad0FPcjBEVVpvakp0eHpwN0NSUGhRL3M5Ni1jL3Bob3RvLmpwZyIsImdpdmVuX25hbWUiOiJKb3NlIEFudG9uaW8iLCJmYW1pbHlfbmFtZSI6Ik1hbGxtYSBMZcOzbiIsImxvY2FsZSI6ImVzIiwiaWF0IjoxNTg1NTM0NjM3LCJleHAiOjE1ODU1MzgyMzd9.QAZl2dH79fDNK8dbn7Z2rqup2jElFhMaAT53Hwg_NfVqDWvJ2zKUOBtJdp6ktsYVVClDzK-N-MMxOorss02XfjgzkP7RbDuozRdvDEP8ivCvKOPICnMQ4Cr-mucMbF0HjNMbG_1fgKXduJVUZtrwwRyM2aJl9vfIZk5mpDjOHEjoamuS2R9P2k37Yvyh9htfCih1C07uK_0ysOnHNp5Dc_VPF3zFI9R-cRI_7UNys4XtZaMSbV5xdmrJv_HoWtTdKn9f8CyAFaqL1nxnB8S0xQ5wEZRZCV0Ee6k28GSSTdIcqc3xShsrzdl00rl1Q0oE7uynyFqgdJ0ze5Nh3zp8eQ
+      responses:
+        200:
+          description: Successful Login
+        400:
+          description: Authentication failed
+  "/auth/facebook/signup":
+    post:
+      tags:
+        - auth
+      summary: Signup by Facebook auth
+      description: |
+        Signup service to register by Facebook auth
+
+        [Tutorial](https://elfsight.com/blog/2017/10/how-to-get-facebook-access-token/)
+
+        [Playgroud](https://developers.facebook.com/tools/explorer)
+      requestBody:
+        content:
+          application/json:
+            schema:
+              allOf:
+                - $ref: "#/components/schemas/registerPayload"
+                - type: object
+                  properties:
+                    access_token:
+                      type: string
+                      description: |
+                        Id token provisto por servicio de Google
+                        Para mayor informacion https://www.youtube.com/watch?v=j_31hJtWjlw
+              required:
+                - access_token
+            examples:
+              Completo:
+                value:
+                  idDocumentType: "CE"
+                  idDocumentNumber: "65487312"
+                  email: "hola@correo.com"
+                  name: "hola"
+                  lastName: "test"
+                  phonePrefix: "+51"
+                  phoneNumber: "987654321"
+                  companyName: "Empresa Prueba"
+                  access_token: "EAAhZATgripZBsBAIQKFjLE1Qm1BfDcY07fXZC1kCS3EtZBeBUZBFfNZBzQ06UQ0Tdlr3lASxYzADXaiCFNnrOOxPWAR4w2idZAfdIZBKSVCX16EMlnjCx4HLQTjYZCZB2SYqgQF3kB58sLNXEuLZARRxFL8TBLmkHhvcbUjIIzaLrVOq42R0hKUQxchtQ6dMjl679EakXwYnVMNgNZBmq9SEhDazB8pTp6liC6oQij3E05tR5GMPk52Hx9FZBwK2UMIZADiZA0ZD"
+              Minimo:
+                value:
+                  idDocumentType: "DNI"
+                  idDocumentNumber: "65487312"
+                  email: "hola2@correo.com"
+                  name: "hola"
+                  lastName: "test"
+                  access_token: "EAAhZATgripZBsBAIQKFjLE1Qm1BfDcY07fXZC1kCS3EtZBeBUZBFfNZBzQ06UQ0Tdlr3lASxYzADXaiCFNnrOOxPWAR4w2idZAfdIZBKSVCX16EMlnjCx4HLQTjYZCZB2SYqgQF3kB58sLNXEuLZARRxFL8TBLmkHhvcbUjIIzaLrVOq42R0hKUQxchtQ6dMjl679EakXwYnVMNgNZBmq9SEhDazB8pTp6liC6oQij3E05tR5GMPk52Hx9FZBwK2UMIZADiZA0ZD"
+      responses:
+        200:
+          description: Successful Signup
+        400:
+          description: Register failed
+  "/auth/facebook/login":
+    post:
+      tags:
+        - auth
+      summary: Login by Facebook oAuth
+      description: |
+        Login service to identify by Facebook auth
+
+        [Tutorial](https://elfsight.com/blog/2017/10/how-to-get-facebook-access-token/)
+
+        [Playgroud](https://developers.facebook.com/tools/explorer)
+
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                access_token:
+                  type: string
+              required:
+                - access_token
+            examples:
+              access_token:
+                value:
+                  access_token: "EAAhZATgripZBsBAIQKFjLE1Qm1BfDcY07fXZC1kCS3EtZBeBUZBFfNZBzQ06UQ0Tdlr3lASxYzADXaiCFNnrOOxPWAR4w2idZAfdIZBKSVCX16EMlnjCx4HLQTjYZCZB2SYqgQF3kB58sLNXEuLZARRxFL8TBLmkHhvcbUjIIzaLrVOq42R0hKUQxchtQ6dMjl679EakXwYnVMNgNZBmq9SEhDazB8pTp6liC6oQij3E05tR5GMPk52Hx9FZBwK2UMIZADiZA0ZD"
       responses:
         200:
           description: Successful Login
@@ -192,7 +275,7 @@ components:
       properties:
         idDocumentType:
           type: string
-          enum: ['DNI', 'CE', 'PASSPORT']
+          enum: ["DNI", "CE", "PASSPORT"]
         idDocumentNumber:
           type: string
         email:
