# api/auth/authentication/authenticationRouter.js
@@ -10,7 +10,7 @@ const userController = (status, message) => (req, res) => {
   return res.status(status).send({
     data: {
       user: req.user,
-      token: req.user.generateAuthToken(), // TODO: Uncomment
+      // token: req.user.generateAuthToken(), // TODO: Uncomment
     },
     status,
     message,
@@ -33,15 +33,29 @@ router.post(
 
 router.post(
   '/google/signup',
-  celebrate(Validator.RegisterGoogle),
+  celebrate(Validator.RegisterGoogleFacebook),
   authenticateMiddleware('googleSignup'),
   userController(201, 'User created by Google account.'),
 );
 
 router.post(
   '/google/login',
-  celebrate(Validator.LoginGoogle),
+  celebrate(Validator.LoginGoogleFacebook),
   authenticateMiddleware('googleLogin'),
+  userController(201, 'User found.'),
+);
+
+router.post(
+  '/facebook/signup',
+  celebrate(Validator.RegisterGoogleFacebook),
+  authenticateMiddleware('facebookSignup'),
+  userController(201, 'User created by Facebook account.'),
+);
+
+router.post(
+  '/facebook/login',
+  celebrate(Validator.LoginGoogleFacebook),
+  authenticateMiddleware('facebookLogin'),
   userController(201, 'User found.'),
 );
 
