# api/auth/authentication/authenticationValidator.js
@@ -57,22 +57,22 @@ const Login = {
   },
 };
 
-const RegisterGoogle = {
+const RegisterGoogleFacebook = {
   body: {
-    idToken: Joi.string().required(),
+    access_token: Joi.string().required(),
     ...registerPayload,
   },
 };
 
-const LoginGoogle = {
+const LoginGoogleFacebook = {
   body: {
-    idToken: Joi.string().required(),
+    access_token: Joi.string().required(),
   },
 };
 
 module.exports = {
   Register,
   Login,
-  RegisterGoogle,
-  LoginGoogle,
+  RegisterGoogleFacebook,
+  LoginGoogleFacebook,
 };
